Used overflow-y instead to avoid white bottom on desktop safari.

--- a/jqtouch/jqtouch.css
+++ b/jqtouch/jqtouch.css
@@ -69,7 +69,7 @@ body {
     }
 
     #jqt.splitscreen > .unfixed {
-        overflow: scroll;
+        overflow-y: scroll;
         height: 100%;
     }
 
